[package]
name = "irelia"
version = "0.1.0"
edition = "2021"
description = "A Rust wrapper around the native LoL APIs"
license = "MIT"
repository = "https://github.com/AlsoSylv/Irelia"
homepage = "https://github.com/AlsoSylv/Irelia"
documentation = "https://docs.rs/irelia"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required across all features
serde_json = { version = "1.0" }
tokio-native-tls = {version = "0.3.0" }
# Optional across some features
hyper-tls = { version = "0.5.0", optional = true }
hyper = { version = "0.14.23", features = ["client", "http1"], optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
tokio-tungstenite = { version = "0.18", features = ["native-tls"], optional = true }
futures-util = { version = "0.3.25", optional = true }
tokio = { version = "1.24.2", features = ["sync", "rt"], optional = true }

[features]
default = ["rest"]
full = ["rest", "in_game", "ws"]
rest = ["dep:serde", "dep:hyper", "dep:hyper-tls"]
in_game = ["dep:serde", "dep:hyper", "dep:hyper-tls", "dep:serde_derive"]
ws = ["dep:tokio-tungstenite", "dep:tokio", "dep:futures-util"]