[package]
name = "irelia"
version = "0.2.0"
edition = "2021"
description = "A Rust wrapper around the native LoL APIs"
license = "MIT"
repository = "https://github.com/AlsoSylv/Irelia"
homepage = "https://github.com/AlsoSylv/Irelia"
documentation = "https://docs.rs/irelia"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Required across all features
serde_json = { version = "1.0" }
tokio-native-tls = {version = "0.3.0" }
once_cell = { version = "1.17.1" }
# Optional across some features
hyper-tls = { version = "0.5.0", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }

[dependencies.futures-util]
version = "0.3"
features = ["std", "sink"]
optional = true
default-features = false

[dependencies.tokio]
version = "1.24"
features = ["sync", "rt"]
optional = true

[dependencies.tokio-tungstenite]
version = "0.18"
features = ["native-tls"]
optional = true

[dependencies.hyper]
version = "0.14"
features = ["client", "http1"]
optional = true

[dev-dependencies]
rand = "0.8.5"
base64 = "0.21.0"

[build-dependencies]
cbindgen = "0.24.3"

[features]
default = [
    "rest",
    "c",
    "in_game",
    "ws"
    ]
full = [
    "rest", 
    "in_game", 
    "ws"
    ]

rest = [
    "dep:serde", 
    "dep:hyper", 
    "dep:hyper-tls", 
    "dep:futures-util"
    ]

in_game = [
    "dep:serde", 
    "dep:hyper", 
    "dep:hyper-tls", 
    "dep:serde_derive"
    ]

ws = [
    "dep:tokio-tungstenite", 
    "dep:tokio", 
    "dep:futures-util"
    ]

c = [
    "dep:tokio"
]

[package.metadata.docs.rs]
all-features = true
