[package]
name = "irelia_encoder"
version = "0.1.1"
edition = "2021"
description = "A Rust wrapper around the native LoL APIs"
license = "MIT"
repository = "https://github.com/AlsoSylv/Irelia"
documentation = "https://docs.rs/irelia_encoder"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = "0.8.5"
base64 = "0.21.0"