[package]
edition = "2021"
name = "irelia-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt", "serde-json"] }
napi-derive = "2.12.2"
irelia = { version = "0.6.10", path = "../irelia" }
serde_json = "1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
