[package]
name = "irelia"
version = "0.7.3"
edition = "2021"
rust-version = "1.79.0"
description = "A Rust wrapper around the native LoL APIs"
license = "MIT"
repository = "https://github.com/AlsoSylv/Irelia"
homepage = "https://github.com/AlsoSylv/Irelia"
documentation = "https://docs.rs/irelia"
readme = "../README.md"
categories = ["api-bindings", "asynchronous", "api-bindings"]
keywords = ["riot", "league", "league-of-legends", "lcu", "riot-games"]

[[example]]
name = "replay"
required-features = ["replay"]

[dependencies]
# Required across all features
serde_json = { version = "1.0", default-features = false, features = ["alloc", "std"] }
rmp-serde = { version = "1.2.0" }
rustls = { version = "0.23", default-features = false }
rustls-pemfile = { version = "2.1", default-features = false, features = [] }
rustls-webpki = { version = "0.102.4", default-features = false  }
irelia_encoder = { path = "../encoder", version = "0.1" }
# Optional across some features
http-body-util = { version = "0.1", optional = true }
sysinfo = { version = "0.30", optional = true, default-features = false }
serde_derive = { version = "1.0", optional = true }
hashlink = { version = "0.9.0", optional = true, features = ["serde_impl"] }
time = { version = "0.3.36", default-features = false, optional = true }

[dependencies.serde]
version = "1.0"
optional = true
default-features = false
features = ["std", "derive"]

[dependencies.hyper-rustls]
version = "0.27"
optional = true
default-features = false
features = ["http1", "rustls-native-certs", "ring"]

[dependencies.tungstenite]
version = "0.23"
features = ["__rustls-tls"]
optional = true

[dependencies.hyper]
version = "1.2"
features = ["http1"]
default-features = false
optional = true

[dependencies.hyper-util]
version = "0.1"
features = ["client-legacy", "http1"]
default-features = false
optional = true

[dev-dependencies]
rand = "0.8.5"
base64 = "0.22.0"

[dev-dependencies.tokio]
version = "1.37"
features = ["sync", "rt", "macros", "rt-multi-thread"]

[features]
default = [
    "full",
    ]

full = [
    "rest", 
    "in_game", 
    "ws",
    ]

rest = [
    "dep:serde",
    "dep:serde_derive",
    "dep:hyper", 
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:hyper-rustls",
    "dep:sysinfo",
    "dep:hashlink"
    ]

in_game = [
    "dep:serde", 
    "dep:hyper", 
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:serde_derive",
    "dep:hyper-rustls",
    "dep:time",
    ]

ws = [
    "dep:tungstenite",
    "dep:sysinfo",
    "dep:serde_derive",
    ]

replay = [
    "in_game",
    ]
encoder_nightly = ["irelia_encoder/nightly"]
encoder_simd = ["irelia_encoder/simd"]

[package.metadata.docs.rs]
features = ["full", "replay"]
