[package]
name = "irelia"
version = "0.8.1"
edition = "2021"
rust-version = "1.80.0"
description = "A Rust wrapper around the native LoL APIs"
license = "MIT"
repository = "https://github.com/AlsoSylv/Irelia"
homepage = "https://github.com/AlsoSylv/Irelia"
documentation = "https://docs.rs/irelia"
readme = "../README.md"
categories = ["api-bindings", "asynchronous", "api-bindings"]
keywords = ["riot", "league", "league-of-legends", "lcu", "riot-games"]

[[example]]
name = "replay"
required-features = ["replay"]

[dependencies]
rmp-serde = { version = "1.3.0" }
rmpv = { version = "1.3.0", features = ["with-serde"], default-features = false }
rustls = { version = "0.23", default-features = false }
irelia_encoder = { path = "../encoder", version = "0.1" }

[dependencies.serde]
version = "1.0"
default-features = false
features = ["std"]

[dependencies.serde_derive]
version = "1.0"
default-features = false
optional = true

[dependencies.serde_json]
version = "1.0"
default-features = false
features = ["std"]
optional = true

[dependencies.hyper]
version = "1.4"
features = ["http1"]
default-features = false
optional = true

[dependencies.hyper-util]
version = "0.1"
features = ["client-legacy", "http1"]
default-features = false
optional = true

[dependencies.hyper-rustls]
version = "0.27"
optional = true
default-features = false
features = ["http1", "rustls-native-certs", "ring"]

[dependencies.http-body-util]
version = "0.1"
optional = true

[dependencies.sysinfo]
version = "0.32"
optional = true
default-features = false
features = ["system"]

[dependencies.time]
version = "0.3"
default-features = false
optional = true

[dependencies.tungstenite]
version = "0.24"
features = ["__rustls-tls"]
optional = true

[dependencies.hashlink]
version = "0.9"
optional = true
features = ["serde_impl"]

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[build-dependencies]
rustls-pemfile = { version = "2.1", default-features = false, features = [] }
rustls-webpki = { version = "0.102.4", default-features = false  }
quote = "1.0.36"
prettyplease = "0.2.20"
syn = "2.0.72"

[dev-dependencies.tokio]
version = "1.37"
features = ["sync", "rt", "macros", "rt-multi-thread"]

[features]
default = [
    "full",
    ]

full = [
    "rest", 
    "in_game",
    "ws"
    ]

rest = [
    "dep:serde_derive",
    "dep:hyper", 
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:hyper-rustls",
    "dep:sysinfo",
    "dep:hashlink"
    ]

rest_schema = ["serde_json"]

in_game = [
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:serde_derive",
    "dep:hyper-rustls",
    "dep:time",
    ]

ws = [
    "dep:tungstenite",
    "dep:sysinfo",
    "dep:serde_derive",
    "serde_json"
    ]

replay = [
    "in_game",
    ]
encoder_nightly = ["irelia_encoder/nightly"]
encoder_simd = ["irelia_encoder/simd"]

[package.metadata.docs.rs]
features = ["full", "replay"]
