[package]
name = "irelia"
version = "0.10.0"
edition = "2024"
rust-version = "1.85.0"
description = "A Rust wrapper around the native LoL APIs"
license = "MIT"
repository = "https://github.com/AlsoSylv/Irelia"
homepage = "https://github.com/AlsoSylv/Irelia"
documentation = "https://docs.rs/irelia"
readme = "../README.md"
categories = ["api-bindings", "asynchronous", "api-bindings"]
keywords = ["riot", "league", "league-of-legends", "lcu", "riot-games"]

[[example]]
name = "replay"
required-features = ["replay"]

[dependencies]
# Serde related
serde = { version = "1.0", default-features = false, features = [] }
serde_derive = { version = "1.0", default-features = false, optional = true }
# Serde JSON is only used with the `rest_schema` and `ws` option
serde_json = { version = "1.0", default-features = false, features = ["std"], optional = true }
# Used for LCU messaging
rmp-serde = { version = "1.3.0" }
rmpv = { version = "1.3.0", features = ["with-serde"], default-features = false }
# NativeTLS related
native-tls = { version = "0.2.12", optional = true }
hyper-tls = { version = "0.6.0", optional = true }
irelia_encoder = { path = "../encoder", version = "0.1" }
# Rustls related
rustls = { version = "0.23", default-features = false, optional = true }
hyper-rustls = { version = "0.27", default-features = false, optional = true, features = ["http1", "ring"] }
http = { version = "1.2.0", default-features = false, optional = true }
reqwest = { version = "0.12", default-features = false, features = ["__rustls"], optional = true }
bytes = { version = "1.10.0", default-features = false, optional = true }

[dependencies.hyper]
version = "1.5"
features = ["http1"]
default-features = false
optional = true

[dependencies.hyper-util]
version = "0.1"
features = ["client-legacy", "http1"]
default-features = false
optional = true

[dependencies.http-body-util]
version = "0.1"
optional = true

[dependencies.sysinfo]
version = "0.33"
optional = true
default-features = false
features = ["system"]

[dependencies.time]
version = "0.3"
default-features = false
optional = true

[dependencies.tungstenite]
version = "0.26"
optional = true

[dependencies.hashlink]
version = "0.10"
optional = true
features = ["serde_impl"]

[dev-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[build-dependencies]
rustls-pemfile = { version = "2.1", default-features = false, features = [] }
rustls-webpki = { version = "0.102.4", default-features = false  }
native-tls = { version = "0.2.12" }
quote = "1.0.36"
prettyplease = "0.2.20"
syn = "2.0.72"

[dev-dependencies.tokio]
version = "1.37"
features = ["sync", "rt", "macros", "rt-multi-thread"]

[features]
default = [
    "full",
    "__hyper",
    "__hyper_rustls",
    "ws_rustls"
    ]

full = [
    "rest", 
    "in_game",
    "ws"
    ]

rest = [
    "dep:serde_derive",
    "dep:sysinfo",
    "dep:hashlink"
    ]

in_game = [
    "dep:serde_derive",
    "dep:time",
    ]

ws = [
    "dep:tungstenite",
    "dep:sysinfo",
    "dep:serde_derive",
    "dep:serde_json"
    ]

ws_nativetls = ["tungstenite/native-tls"]

ws_rustls = ["tungstenite/__rustls-tls"]

replay = [
    "in_game",
    "dep:sysinfo",
    ]

rest_schema = [
    "dep:serde_json",
    "serde/std",
    "hyper-rustls/rustls-native-certs",
    ]

__hyper = [
    "dep:hyper", 
    "dep:hyper-util",
    "dep:http-body-util",
    "http"
]

__hyper_rustls = [
    "dep:rustls",
    "dep:hyper-rustls",
]

__hyper_nativetls = [
    "dep:hyper-tls",
    "dep:native-tls",
]

__reqwest = [
    "dep:reqwest",
    "http"
]

__reqwest_rustls = [
    "dep:rustls",
    "reqwest/__rustls",
]

__reqwest_nativetls = [
    "dep:native-tls",
    "reqwest/native-tls",
]

http = [
    "dep:bytes",
    "dep:http",
]

encoder_nightly = ["irelia_encoder/nightly"]
encoder_simd = ["irelia_encoder/simd"]

[package.metadata.docs.rs]
features = ["full", "replay"]
