[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
rustfmt-wrapper = "0.2.1"
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.6.0"
serde_derive = "1.0"
serde = "1.0"